--- a/style.css
+++ b/style.css
@@ -15,3 +15,11 @@ ul.nav a:hover {
 .navbar-default .navbar-nav>li>a {
 	color:#666;
 }
+.navbar-default .navbar-brand {
+	color:white;
+}
+
+/*Helper Classes*/
+.ml30px {
+	margin-left:350px;
+}
