--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.container {
+
+}
 .navbar {
 	background-color:black;
 }
@@ -21,5 +24,5 @@ ul.nav a:hover {
 
 /*Helper Classes*/
 .ml30px {
-	margin-left:350px;
+	margin-left:100px;
 }
